now shows acurate date and ip

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: .
     environment:
       - PORT=8089
+      - TZ=America/Toronto
     restart: unless-stopped
     
   amg-ws:
