--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ dotenv = "0.15.0"
 handlebars = {version = "5.1.0", features=["dir_source"]} 
 serde = {version = "1.0.196", features=["derive"]}
 serde_json = "1.0.112"
+time = {version = "0.3.34", features=["local-offset"]}
