--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - PORT=8089
       - TZ=America/Toronto
     restart: unless-stopped
+    volumes:
+      - amg-db:/srv/database
     
   amg-ws:
     image: nginx
@@ -23,4 +25,6 @@ networks:
         name: "amg-srv-net"
         driver: bridge
 
-
+volumes:
+  amg-db:
+    external: false
