--- a/00-notiplog-site.conf
+++ b/00-notiplog-site.conf
@@ -9,7 +9,7 @@ server {
   client_max_body_size 2G;
 
   location / {
-    proxy_pass http://amg-srv:8089/;
+    proxy_pass http://notiplog-srv:8089/;
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header  X-Forwarded-Host $remote_addr;
