--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "amogousse-server"
+name = "definitely-not-an-ip-logger"
 version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "amg-srv"
+name = "notiplog-srv"
 path = "src/main.rs"
 
 [dependencies]
