--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = {version = "1.0.196", features=["derive"]}
 serde_json = "1.0.112"
 time = {version = "0.3.34", features=["local-offset", "macros"]}
 sqlx = {version = "0.7", features = [ "sqlite", "runtime-async-std", "time"]}
+rand = "0.8.5"
