--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ serde_json = "1.0.112"
 time = {version = "0.3.34", features=["local-offset", "macros"]}
 sqlx = {version = "0.8.6", features = [ "sqlite", "runtime-async-std", "time"]}
 rand = "0.8.5"
+env_logger = "0.11.8"
